# wasmjvm

./: Cargo.toml  README.md
class/: Cargo.toml
class/src/: access_flag.rs  attribute.rs  class.rs  constant.rs  descriptor.rs  error.rs  field.rs  interface.rs  lib.rs  method.rs  object.rs  stream.rs
common/: Cargo.toml
common/src/: error.rs  stream.rs
java/: Cargo.toml
java/projects/Boot/src/: Child.java  Main.java  Parent.java
java/projects/Game/: Main.java
java/projects/Game/src/: Main.java
java/projects/Game/src/game/: Game.java  Hangman.java
java/projects/Test/src/: Main.java
java/projects/Test/src/test/: Test.java  (+3 more)
java/src/: main.rs
native/: Cargo.toml
native/src/: base.rs  class.rs  implementation.rs  interface.rs  lib.rs  loader.rs  object.rs  opcode.rs  thread.rs
os/: Cargo.toml
os/src/: implementation.rs  main.rs
test/: .gitignore  Makefile
test/base/: Main.java
test/base/java/io/: InputStream.java  PrintStream.java
test/base/java/lang/: Class.java  Loader.java  Object.java  String.java  System.java  Thread.java
tests/: Makefile  OnTheWeb.java
vm/: .gitignore  Cargo.toml
vm/src/: lib.rs  main.rs  object.rs  opcode.rs  thread.rs  vm.rs
vm/test/: OnTheWeb.java
wasm/: Cargo.toml  README.md
wasm/js/: package-lock.json  package.json  tsconfig.json  webpack.common.js
wasm/js/interface/: index.ts  react.ts  resources.ts  rust.ts  worker.ts
wasm/js/public/: index.html
wasm/js/src/: App.tsx  DevPanel.tsx  Header.tsx  IOPanel.tsx  index.ts  index.tsx  module.ts
wasm/src/: binding.rs  implementation.rs  lib.rs
(+19 files in other folders)
