[package]
name = "wasmjvm_os"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
wasmjvm_class = { path = "../class", version = "0.1.0" }
wasmjvm_vm = { path = "../vm", version = "0.1.0" }
wasmjvm_common = { path = "../common", version = "0.1.0" }
wasmjvm_native = { path = "../native", version = "0.1.0" }
