[package]
name = "wasmjvm_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasmjvm_class = { path = "../class", version = "0.1.0" }
wasmjvm_vm = { path = "../vm", version = "0.1.0" }
wasmjvm_common = { path = "../common", version = "0.1.0" }
